--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.0.1"
   },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
